app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: 24 6% 90%;
  --foreground: 215 25% 17%;
  --card: 60 9% 98%;
  --card-foreground: 215 25% 17%;
  --popover: 60 9% 98%;
  --popover-foreground: 215 25% 17%;
  --primary: 239 84% 67%;
  --primary-foreground: 0 0% 100%;
  --secondary: 20 6% 83%;
  --secondary-foreground: 220 9% 36%;
  --muted: 24 6% 90%;
  --muted-foreground: 218 11% 47%;
  --accent: 300 43% 94%;
  --accent-foreground: 215 16% 30%;
  --destructive: 0 84% 60%;
  --destructive-foreground: 0 0% 100%;
  --border: 20 6% 83%;
  --input: 20 6% 83%;
  --ring: 239 84% 67%;
  --chart-1: 239 84% 67%;
  --chart-2: 243 76% 59%;
  --chart-3: 244 58% 51%;
  --chart-4: 244 55% 41%;
  --chart-5: 242 47% 34%;
  --sidebar: 20 6% 83%;
  --sidebar-foreground: 215 25% 17%;
  --sidebar-primary: 239 84% 67%;
  --sidebar-primary-foreground: 0 0% 100%;
  --sidebar-accent: 300 43% 94%;
  --sidebar-accent-foreground: 215 16% 30%;
  --sidebar-border: 20 6% 83%;
  --sidebar-ring: 239 84% 67%;
  --font-sans: Outfit, sans-serif;
  --font-serif: Inter, sans-serif;
  --font-mono: Roboto Mono, monospace;
  --radius: 1.25rem;
  --shadow-x: 2px;
  --shadow-y: 2px;
  --shadow-blur: 10px;
  --shadow-spread: 4px;
  --shadow-opacity: 0.18;
  --shadow-color: hsl(240 4% 60%);
  --shadow-2xs: 2px 2px 10px 4px hsl(240 4% 60% / 0.09);
  --shadow-xs: 2px 2px 10px 4px hsl(240 4% 60% / 0.09);
  --shadow-sm: 2px 2px 10px 4px hsl(240 4% 60% / 0.18), 2px 1px 2px 3px hsl(240 4% 60% / 0.18);
  --shadow: 2px 2px 10px 4px hsl(240 4% 60% / 0.18), 2px 1px 2px 3px hsl(240 4% 60% / 0.18);
  --shadow-md: 2px 2px 10px 4px hsl(240 4% 60% / 0.18), 2px 2px 4px 3px hsl(240 4% 60% / 0.18);
  --shadow-lg: 2px 2px 10px 4px hsl(240 4% 60% / 0.18), 2px 4px 6px 3px hsl(240 4% 60% / 0.18);
  --shadow-xl: 2px 2px 10px 4px hsl(240 4% 60% / 0.18), 2px 8px 10px 3px hsl(240 4% 60% / 0.18);
  --shadow-2xl: 2px 2px 10px 4px hsl(240 4% 60% / 0.45);
  --tracking-normal: 0em;
  --spacing: 0.25rem;
}

.dark {
  --background: 0 0% 7%;
  --foreground: 214 32% 91%;
  --card: 240 10% 13%;
  --card-foreground: 214 32% 91%;
  --popover: 240 10% 13%;
  --popover-foreground: 214 32% 91%;
  --primary: 199 82% 78%;
  --primary-foreground: 0 0% 7%;
  --secondary: 336 88% 49%;
  --secondary-foreground: 326 64% 98%;
  --muted: 240 15% 15%;
  --muted-foreground: 218 11% 65%;
  --accent: 269 100% 70%;
  --accent-foreground: 291 100% 97%;
  --destructive: 0 81% 62%;
  --destructive-foreground: 326 30% 9%;
  --border: 0 0% 23%;
  --input: 0 0% 23%;
  --ring: 199 82% 78%;
  --chart-1: 199 82% 78%;
  --chart-2: 239 84% 67%;
  --chart-3: 336 88% 49%;
  --chart-4: 269 100% 70%;
  --chart-5: 27 98% 49%;
  --sidebar: 240 10% 13%;
  --sidebar-foreground: 214 32% 91%;
  --sidebar-primary: 199 82% 78%;
  --sidebar-primary-foreground: 0 0% 6%;
  --sidebar-accent: 336 88% 49%;
  --sidebar-accent-foreground: 326 64% 98%;
  --sidebar-border: 0 0% 23%;
  --sidebar-ring: 199 82% 78%;
  --font-sans: Outfit, sans-serif;
  --font-serif: Inter, sans-serif;
  --font-mono: Roboto Mono, monospace;
  --radius: 1.25rem;
  --shadow-x: 2px;
  --shadow-y: 2px;
  --shadow-blur: 10px;
  --shadow-spread: 4px;
  --shadow-opacity: 0.18;
  --shadow-color: hsl(0 0% 0%);
  --shadow-2xs: 2px 2px 10px 4px hsl(0 0% 0% / 0.09);
  --shadow-xs: 2px 2px 10px 4px hsl(0 0% 0% / 0.09);
  --shadow-sm: 2px 2px 10px 4px hsl(0 0% 0% / 0.18), 2px 1px 2px 3px hsl(0 0% 0% / 0.18);
  --shadow: 2px 2px 10px 4px hsl(0 0% 0% / 0.18), 2px 1px 2px 3px hsl(0 0% 0% / 0.18);
  --shadow-md: 2px 2px 10px 4px hsl(0 0% 0% / 0.18), 2px 2px 4px 3px hsl(0 0% 0% / 0.18);
  --shadow-lg: 2px 2px 10px 4px hsl(0 0% 0% / 0.18), 2px 4px 6px 3px hsl(0 0% 0% / 0.18);
  --shadow-xl: 2px 2px 10px 4px hsl(0 0% 0% / 0.18), 2px 8px 10px 3px hsl(0 0% 0% / 0.18);
  --shadow-2xl: 2px 2px 10px 4px hsl(0 0% 0% / 0.45);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);
}






@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
}

